--- a/css/styles.css
+++ b/css/styles.css
@@ -73,8 +73,13 @@ h1.global_logo {
 h1.global_logo a {
 	color: #232096;
 	text-decoration: none;
+	line-height:.9;
 }
 
+h1.global_logo a span.small {
+	font-size:.9em;	
+	margin-left:5px;
+}
 
 .global_flt {
 	float: left;
@@ -797,6 +802,244 @@ a.merchantLink {
 	width: 212px;
 	height: 119px;
 }
+
+/* CSS Document */
+
+/**
+ * BxSlider v4.1.2 - Fully loaded, responsive content slider
+ * http://bxslider.com
+ *
+ * Written by: Steven Wanderski, 2014
+ * http://stevenwanderski.com
+ * (while drinking Belgian ales and listening to jazz)
+ *
+ * CEO and founder of bxCreative, LTD
+ * http://bxcreative.com
+ */
+
+
+/** RESET AND LAYOUT
+===================================*/
+
+.bx-wrapper {
+	position: relative;
+	margin: 0 auto 0px;
+	padding: 0;
+	*zoom: 1;
+}
+
+.bx-wrapper img {
+	max-width: 100%;
+	display: block;
+}
+
+.bx-wrapper .banner_content {
+	position:absolute;
+	bottom:2%;	
+	width:100%;
+	text-align: center;
+	padding: 0px 0 18px 0;
+
+}
+
+.bx-wrapper h2 {
+	font-size: 40px;
+	line-height: 42px;
+	color: #ffffff;
+	text-shadow: 2px 2px 4px #000000;
+	margin-bottom:20px;
+}
+
+.bx-wrapper .app_button-yellow {
+	margin:0px;
+}
+
+/** THEME
+===================================*/
+
+.bx-wrapper .bx-viewport {
+	/*-moz-box-shadow: 0 0 5px #ccc;
+	-webkit-box-shadow: 0 0 5px #ccc;
+	box-shadow: 0 0 5px #ccc;
+	border:  5px solid #fff;
+	left: -5px;*/
+	background: #fff;
+	
+	/*fix other elements on the page moving (on Chrome)*/
+	-webkit-transform: translatez(0);
+	-moz-transform: translatez(0);
+    	-ms-transform: translatez(0);
+    	-o-transform: translatez(0);
+    	transform: translatez(0);
+}
+
+.bx-wrapper .bx-pager,
+.bx-wrapper .bx-controls-auto {
+	position: absolute;
+	left: 800px;
+	bottom: 0px;
+	width: 200px;
+}
+
+/* LOADER */
+
+.bx-wrapper .bx-loading {
+	min-height: 50px;
+	background: url(https://66.246.174.174/e/visa/timages/bx_loader.gif) center center no-repeat #fff;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 2000;
+}
+
+/* PAGER */
+
+.bx-wrapper .bx-pager {
+	text-align: center;
+	font-size: .85em;
+	font-family: Arial;
+	font-weight: bold;
+	color: #666;
+	padding-top: 20px;
+}
+
+.bx-wrapper .bx-pager .bx-pager-item,
+.bx-wrapper .bx-controls-auto .bx-controls-auto-item {
+	display: inline-block;
+	*zoom: 1;
+	*display: inline;
+}
+
+.bx-wrapper .bx-pager.bx-default-pager a {
+	background: #666;
+	text-indent: -9999px;
+	display: block;
+	width: 10px;
+	height: 10px;
+	margin: 0 5px;
+	outline: 0;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+}
+
+.bx-wrapper .bx-pager.bx-default-pager a:hover,
+.bx-wrapper .bx-pager.bx-default-pager a.active {
+	background: #fff;
+}
+
+/* DIRECTION CONTROLS (NEXT / PREV) */
+
+.bx-wrapper .bx-prev {
+	left: 10px;
+	background: url(https://66.246.174.174/e/visa/timages/controls.png) no-repeat 0 -32px;
+}
+
+.bx-wrapper .bx-next {
+	right: 10px;
+	background: url(https://66.246.174.174/e/visa/timages/controls.png) no-repeat -43px -32px;
+}
+
+.bx-wrapper .bx-prev:hover {
+	background-position: 0 0;
+}
+
+.bx-wrapper .bx-next:hover {
+	background-position: -43px 0;
+}
+
+.bx-wrapper .bx-controls-direction a {
+	position: absolute;
+	top: 50%;
+	margin-top: -16px;
+	outline: 0;
+	width: 32px;
+	height: 32px;
+	text-indent: -9999px;
+	z-index: 9999;
+}
+
+.bx-wrapper .bx-controls-direction a.disabled {
+	display: none;
+}
+
+/* AUTO CONTROLS (START / STOP) */
+
+.bx-wrapper .bx-controls-auto {
+	text-align: center;
+}
+
+.bx-wrapper .bx-controls-auto .bx-start {
+	display: block;
+	text-indent: -9999px;
+	width: 10px;
+	height: 11px;
+	outline: 0;
+	background: url(https://66.246.174.174/e/visa/timages/controls.png) -86px -11px no-repeat;
+	margin: 0 3px;
+}
+
+.bx-wrapper .bx-controls-auto .bx-start:hover,
+.bx-wrapper .bx-controls-auto .bx-start.active {
+	background-position: -86px 0;
+}
+
+.bx-wrapper .bx-controls-auto .bx-stop {
+	display: block;
+	text-indent: -9999px;
+	width: 9px;
+	height: 11px;
+	outline: 0;
+	background: url(https://66.246.174.174/e/visa/timages/controls.png) -86px -44px no-repeat;
+	margin: 0 3px;
+}
+
+.bx-wrapper .bx-controls-auto .bx-stop:hover,
+.bx-wrapper .bx-controls-auto .bx-stop.active {
+	background-position: -86px -33px;
+}
+
+/* PAGER WITH AUTO-CONTROLS HYBRID LAYOUT */
+
+.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {
+	text-align: left;
+	width: 80%;
+}
+
+.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto {
+	right: 0;
+	width: 35px;
+}
+
+/* Eligible Link */
+
+.bx-wrapper a.eligible,
+.how_hero a.eligible {
+	margin-left:10px;
+	color:#FFF;	
+}
+
+/* IMAGE CAPTIONS */
+
+.bx-wrapper .bx-caption {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	background: #666\9;
+	background: rgba(80, 80, 80, 0.75);
+	width: 100%;
+}
+
+.bx-wrapper .bx-caption span {
+	color: #fff;
+	font-family: Arial;
+	display: block;
+	font-size: .85em;
+	padding: 10px;
+}
+
 .cycle-slideshow {
 	float: left;
 }
@@ -907,6 +1150,22 @@ a.merchantLink {
 	height: 449px;
 	background-image: url("../images/how_hero.jpg");
 	background-repeat: no-repeat;
+	position:relative;
+}
+
+.how_hero .how_hero_content {
+	position:absolute;
+	top:220px;
+	padding:0px 30px;	
+}
+
+.how_hero h2 {
+	font-size: 40px;
+    line-height: 42px;
+    color: #ffffff;
+    text-shadow: 2px 2px 4px #000000;
+    margin-bottom: 20px;
+	text-align:center;
 }
 .how_hero_steps {
 	padding: 22px 0 0 40px
@@ -1035,8 +1294,9 @@ a.merchantLink {
 	display: none;
 }
 .how_hero_enroll {
-	margin: 19px 0 0 130px;
+	margin: 19px 0 0 8px;
 }
+
 /*Learning Center Style Section*/
 .learningcenter_hero {
 	padding: 0 0 0 60px;
@@ -2168,6 +2428,27 @@ div.app_download-first {
 	bottom: 0px;
 	width: 300px;
 }
+
+.bx-viewport h2 {
+	font-size: 16px;
+  	line-height: 18px;	
+}
+
+.bx-wrapper {
+	position: relative;
+	margin: 0 auto 0px;
+	padding: 0;
+	*zoom: 1;
+}
+
+.bx-wrapper img {
+	max-width: 100%;
+	display: block;
+}
+
+.bx-wrapper .app_button-yellow {
+	margin:0px;
+}
 .dis_merchant_sortby {
 	width: 315px;
 	height: 60px;
@@ -3113,3 +3394,5 @@ p.enroll_gradiant_legal {
 	display: none;
 }
 }
+
+
